log/build_2025-04-19_00-41-09/gpio_nav_control/stderr.log
  File "/home/rasp/ros2_ws/install/gpio_nav_control/lib/python3.12/site-packages/gpio_nav_control/button_control.py", line 127
    elif self.mode == "manu":
    ^^^^
SyntaxError: invalid syntax

